--- a/documents/final.qmd
+++ b/documents/final.qmd
@@ -10,9 +10,7 @@ execute:
   message: false
 ---
 
-The data used in this analysis are ...
-
-# Data Preparation
+The data used in this analysis are from a 1948 study in the British Medical Journal conducted by the Tuberculosis Trial Committee. This data set contains baseline characteristics and outcomes for `r nrow(strep_tb)` participants. In this randomized, placebo-controlled clinical trial, the treatment group received a daily dose of 2 grams of streptomycin to treat pulmonary tuberculosis compared to the placebo group, which did not receive streptomycin. 
 
 ```{r}
 #| output: false
@@ -36,7 +34,7 @@ strep_tb <- read_csv(here::here("data", "strep_tb.csv")) |>
 											radiologic_6m_cat = factor(radiologic_6m, levels = c("1_Death", "2_Considerable Deterioration", "3_Moderate_deterioration", "4_No_change", "5_Moderate_improvement", "6_Considerable_improvement"), labels = c("Death", "Considerable Deterioration", "Moderate Deterioration", "No Change", "Moderate Improvement", "Considerable Improvement")))
 ```
 
-# Data Analysis
+# Analysis
 
 ## Table of Descriptive Statistics
 
@@ -64,7 +62,7 @@ tbl_summary(
 	bold_labels()
 ```
 
-@tbl-one is a table of descriptive statistics for a variety of categorical variables.
+@tbl-one is a table of descriptive statistics for a variety of categorical variables. 
 
 ## Multivariate Logistic Regression Table
 
